--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus mollitia neque corporis eveniet, sunt laboriosam, labore iusto architecto et voluptas est vero esse aspernatur cum, tempora ratione accusantium nobis impedit!</p>
-            <p>Acesse aqui</p>
+            <p> <a href="https://www.youtube.com/embed/riSVzwlSnhw"></a> Acesse aqui</p>
         </article>
         <article>
             <h2>Curso de JavaScripty</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est a numquam nesciunt, assumenda ab aspernatur nemo suscipit? Voluptate aliquid neque blanditiis obcaecati, magni deleniti harum ducimus ipsam quasi incidunt illum.</p>
-            <p>Acesse aqui</p>
+            
         </article>
 
     </main>
